k8s-configs/be-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-microservice
  template:
    metadata:
      labels:
        app: gateway-microservice
    spec:
      containers:
        - name: gateway-microservice
          image: gateway-microservice:latest # You'll need to build and push this image
          ports:
            - containerPort: 3000
