k8s-configs/be-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-microservice
spec:
  selector:
    app: gateway-microservice
  ports:
    - port: 3000
      targetPort: 3000
