k8s-configs/be-gateway/ingress.yaml
# Ingress for Dashboard
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS, DELETE, PUT
    nginx.ingress.kubernetes.io/cors-allow-origin: http://dashboard.hirehub.loc
spec:
  rules:
    - host: gateway.hirehub.loc # Changed to localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-gateway
                port:
                  number: 3000
